# cppgp

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE.txt  README.md  cmake_macros.txt
cppgp/: CMakeLists.txt
cppgp/gp/: CMakeLists.txt  ftcapprox.h  gaussianprocess.cpp  gaussianprocess.hpp  gpapproximation.cpp  gpapproximation.hpp  gpdata.cpp  gpdata.hpp  gpdata.test.cpp  input.hpp
cppgp/kernels/: CMakeLists.txt  covfun.cpp  covfun.hpp  covfun_rbf.cpp  covfun_rbf.hpp  gpkernel.cpp  gpkernel.hpp  gpkernel.test.cpp  rbf_covfun.cpp  rbf_covfun.hpp  rbfkernel.cpp  rbfkernel.hpp
cppgp/math/: CMakeLists.txt  distance.cpp  distance.hpp  distance.test.cpp
cppgp/util/: CMakeLists.txt  datafile.cpp  datafile.hpp  datafile.test.cpp  datafile_conv.cpp  datafile_conv.hpp  datafile_io.cpp  datafile_io.hpp  datafile_io.test.cpp  exceptions.hpp  exceptions.test.cpp  file_io.cpp  file_io.hpp  file_io.test.cpp  observer.cpp  observer.hpp  observer.test.cpp  prototype.cpp  prototype.hpp  stringutil.cpp  stringutil.hpp  stringutil.test.cpp  workspace.cpp  workspace.hpp  workspace.test.cpp
data/testing/: matrix_01.txt
doc/html/: annotated.html  classGP_1_1FTC-members.html  classGP_1_1FTC.html  classGP_1_1FTC__coll__graph.md5  classGP_1_1FTC__inherit__graph.map  classGP_1_1GPApproximation-members.html  classGP_1_1GPApproximation.html  classGP_1_1GPApproximation__inherit__graph.map  classGP_1_1GPApproximation__inherit__graph.md5  classGP_1_1RBFKernel-members.html  classGP_1_1RBFKernel.html  classGP_1_1RBFKernel__coll__graph.md5  classGP_1_1RBFKernel__inherit__graph.map  classes.html  classgp_1_1GaussianProcess-members.html  classgp_1_1GaussianProcess.html  classgp_1_1kernel_1_1GPKernel-members.html  classgp_1_1kernel_1_1GPKernel.html  classutil_1_1exceptions_1_1Error-members.html  classutil_1_1exceptions_1_1Error.html  classutil_1_1exceptions_1_1Error__coll__graph.map  classutil_1_1exceptions_1_1Error__coll__graph.md5  classutil_1_1exceptions_1_1Error__inherit__graph.map  classutil_1_1exceptions_1_1Error__inherit__graph.md5  classutil_1_1exceptions_1_1InconsistentInputError-members.html  classutil_1_1exceptions_1_1InconsistentInputError.html  classutil_1_1exceptions_1_1InconsistentInputError__coll__graph.map  classutil_1_1exceptions_1_1InconsistentInputError__inherit__graph.md5  dir_017ad5e908c41501f6a06b5119b37293.html  dir_488a38d1d68613c80e956d913338db6f.html  dir_61e2437695956f7bcf8cf518d0af5293.html  dir_90b540a60f6d4c7f903393b3db9eca71.html  dir_c0f1080f02c7307d30dfa776b768fded.html  dir_e4bd6a2f6b97a7813bea0fd4c2056038.html  dir_e6464ce20b9a6f3984c488adcb19fdfe.html  exceptions_8hpp_source.html  files.html  ftcapprox_8h_source.html  functions.html  functions_func.html  (+19 more)
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  functions_0.js  searchdata.js
doc/latex/: annotated.tex  classGP_1_1FTC.tex  classGP_1_1FTC__coll__graph.md5  classGP_1_1GPApproximation.tex  classGP_1_1GPApproximation__inherit__graph.md5  classGP_1_1RBFKernel.tex  classGP_1_1RBFKernel__coll__graph.md5  classgp_1_1GaussianProcess.tex  classgp_1_1kernel_1_1GPKernel.tex  classutil_1_1exceptions_1_1Error.tex  classutil_1_1exceptions_1_1Error__coll__graph.md5  classutil_1_1exceptions_1_1Error__inherit__graph.md5  classutil_1_1exceptions_1_1InconsistentInputError.tex  classutil_1_1exceptions_1_1InconsistentInputError__inherit__graph.md5  hierarchy.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.out  refman.tex  refman.toc
